--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -20,16 +20,46 @@
         />
       </svg>
     </button>
+    <button
+      type="button"
+      class="px-3 py-2 text-xs font-medium text-center inline-flex items-center text-white bg-orange-700 rounded-lg hover:bg-orange-800 focus:ring-4 focus:outline-none focus:ring-orange-300 dark:bg-orange-600 dark:hover:bg-orange-700 dark:focus:ring-orange-800"
+      (click)="removeAllTodos()"
+    >
+      <svg
+        class="w-3 h-3 text-white"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor"
+        viewBox="0 0 20 16"
+      >
+        <path
+          d="m10.036 8.278 9.258-7.79A1.979 1.979 0 0 0 18 0H2A1.987 1.987 0 0 0 .641.541l9.395 7.737Z"
+        />
+        <path
+          d="M11.241 9.817c-.36.275-.801.425-1.255.427-.428 0-.845-.138-1.187-.395L0 2.6V14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2.5l-8.759 7.317Z"
+        />
+      </svg>
+    </button>
   </div>
-  <ul class="text-white overflow-y-auto flex gap-2 flex-col">
-    <li *ngFor="let todo of todos">
-      <div class="flex flex-row gap-5 justify-between items-center">
+  <ul class="text-white flex gap-1 flex-col bg-slate-700">
+    <li *ngFor="let todo of todos" class="bg-slate-800 p-2 hover:bg-slate-500">
+      <div
+        class="flex flex-row gap-5 justify-between items-center min-h-[40px]"
+      >
         <div class="flex flex-1 flex-row gap-5 justify-between items-center">
-          <span class="min-w-[100px]">{{ todo.title }}</span>
+          <div class="min-w-[100px] flex flex-col">
+            <span class="font-medium text-lg">{{ todo.title }}</span>
+            <span
+              *ngIf="todo.description"
+              class="min-w-[100px] font-light text-sm leading-3"
+              >{{ todo.description }}</span
+            >
+          </div>
           <input
             id="default-checkbox"
             type="checkbox"
             [checked]="todo.completed"
+            (click)="setComplete(todo)"
             class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
           />
         </div>
@@ -55,7 +85,6 @@
             </svg>
           </button>
         </div>
-        <!-- <span>{{ todo.completed }}</span> -->
       </div>
     </li>
   </ul>
