--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,22 +1,22 @@
 <div
-  class="bg-sky-700 bg-opacity-20 min-h-[250px] min-w-[300px] rounded-lg flex flex-col gap-2"
+  class="bg-sky-700 bg-opacity-20 min-h-[250px] min-w-[300px] rounded-lg flex flex-col gap-2 hover:bg-sky-900 hover:bg-opacity-60 transition duration-300 ease-in-out"
 >
   <div
     class="text-white flex-col gap-1 inline-flex pt-2 pb-2 border-b-blue-300 border-b-[1px] border-solid"
   >
     <span
       *ngIf="title"
-      class="text-xl font-medium uppercase text-sky-300 leading-5 px-2"
+      class="text-xl font-medium uppercase text-sky-300 leading-6 px-2"
       >{{ title }}</span
     >
     <span
       *ngIf="description"
-      class="text-sm font-light text-sky-100 leading-5 pr-2 pl-3"
+      class="text-sm font-light text-sky-100 leading-3 px-2"
       >{{ description }}</span
     >
   </div>
   <div
-    class="overflow-y-auto h-[175px] px-3 pb-2 {{
+    class="overflow-y-auto h-[180px] px-3 pb-2 {{
       justify && 'flex flex-1 justify-center items-center'
     }}"
   >
