--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,5 +63,11 @@
     >
       <app-view-child />
     </card-component>
+    <card-component
+      title="Using Services "
+      description="Basic Services Sample using rxjs"
+    >
+      <app-mission-control />
+    </card-component>
   </div>
 </div>
