--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -1,1 +1,58 @@
-<div>Stores</div>
+<div class="flex flex-col gap-5">
+  <app-title name="Store"></app-title>
+
+  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+      <thead
+        class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+      >
+        <tr>
+          <th scope="col" class="px-6 py-3 font-bold">
+            <span class="sr-only">Imagen</span>
+          </th>
+          <th scope="col" class="px-6 py-3 font-bold">Product</th>
+          <th scope="col" class="px-6 py-3 font-bold">Descripción</th>
+          <th scope="col" class="px-6 py-3 font-bold">Precio</th>
+          <th scope="col" class="px-6 py-3 font-bold">Categoría</th>
+          <th scope="col" class="px-6 py-3 font-bold">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr
+          class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
+          *ngFor="let product of products"
+        >
+          <td class="w-32 p-4">
+            <img
+              [ngSrc]="product.image"
+              alt="Apple Watch"
+              width="100"
+              height="60"
+              class="rounded-full object-cover mx-auto"
+              [title]="product.title"
+            />
+          </td>
+          <td class="px-6 py-4 text-gray-900 dark:text-white">
+            {{ product.title }}
+          </td>
+          <td class="px-6 py-4 text-gray-900 dark:text-white">
+            {{ product.description }}
+          </td>
+          <td class="px-6 py-4 text-gray-900 dark:text-white">
+            {{ product.price | currency }}
+          </td>
+          <td class="px-6 py-4 text-gray-900 dark:text-white">
+            {{ product.category }}
+          </td>
+          <td class="px-6 py-4">
+            <a
+              href="/store/{{ product.id }}"
+              class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
+              >Visualizar</a
+            >
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
