--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <div class="min-h-screen p-3 bg-slate-800">
   <header>
     <nav class="py-2 px-5 bg-sky-800 rounded flex justify-between items-center">
-      <h1
+      <a
         class="text-white cursor-pointer text-2xl uppercase tracking-widest font-bold hover:text-indigo-300 hover:scale-110 transition duration-300 ease-in-out"
+        routerLink="/"
       >
         First Shit
-      </h1>
+      </a>
       <ul class="flex flex-row justify-between items-center text-white gap-5">
         <li>
           <a
