--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         class="text-white cursor-pointer text-2xl uppercase tracking-widest font-bold hover:text-indigo-300 hover:scale-110 transition duration-300 ease-in-out"
         routerLink="/"
       >
-        First Shit
+        First Angular App
       </a>
       <ul class="flex flex-row justify-between items-center text-white gap-5">
         <li>
