--- a/src/app/components/random-color-text/random-color-text.component.html
+++ b/src/app/components/random-color-text/random-color-text.component.html
@@ -1,1 +1,7 @@
-<p *ngIf="letter" [style.color]="color">{{ letter }}</p>
+<p
+  *ngIf="letter"
+  [style.color]="color"
+  class="drop-shadow-[0_1.2px_1.2px_rgba(255,255,255,1)]"
+>
+  {{ letter }}
+</p>
