lazy loading & shared modules

--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -46,7 +46,7 @@
           </td>
           <td class="px-6 py-4">
             <a
-              href="/store/{{ product.id }}"
+              [routerLink]="['/store', product.id]"
               class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
               >Visualizar</a
             >
